--- a/lambdatimes/src/CSS/index.css
+++ b/lambdatimes/src/CSS/index.css
@@ -120,7 +120,7 @@ body {
 .top-bar .container .container-right span {
   cursor: pointer;
 }
-/* .header {
+.header {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -164,7 +164,7 @@ body {
   display: flex; 
   flex-direction: column; 
   align-items: center;
-} */
+}
 .tabs {
   border-bottom: 1px solid lightgrey;
   display: flex;
